rocon_app_utilities/tests/test_rapps/rapp/invalid_classification/foo.interface
publishers: 
  - name: chatter
    type: std_msgs/String
subscribers: []
services: []
